exlude both examples and build configs from coverage

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "test7": "nave use 7.9 npm test",
     "test-all": "npm run test4 && npm run test6 && npm run test7",
     "precoverage": "npm run clean",
-    "coverage": "istanbul cover -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
+    "coverage": "istanbul cover -x 'examples/**' -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
     "publish-coverage": "npm run coverage && cat coverage/lcov.info | coveralls",
     "precoverage-lcov": "npm run clean",
-    "coverage-lcov": "istanbul cover _mocha --report lcovonly -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
+    "coverage-lcov": "istanbul cover -x 'examples/**' -x 'build/**' _mocha --report lcovonly -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
     "coverage-clean": "rm -rf ./coverage",
     "counter": "npm run build && node examples/strings/counter",
     "counter-direct": "npm run build && node examples/strings/counter-direct",
