--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "test": "mocha --compilers coffee:coffee-script/register --reporter spec --bail --check-leaks test/lib",
     "test4": "nave use 4.8 npm test",
     "test6": "nave use 6.10 npm test",
-    "test7": "nave use 7.9 npm test",
+    "test7": "nave use 7.10 npm test",
     "test-all": "npm run test4 && npm run test6 && npm run test7",
     "precoverage": "npm run clean",
-    "coverage": "istanbul cover -x 'examples/**' -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
+    "coverage": "istanbul cover -x 'benchmark/**' -x 'examples/**' -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
     "publish-coverage": "npm run coverage && cat coverage/lcov.info | coveralls",
     "precoverage-lcov": "npm run clean",
-    "coverage-lcov": "istanbul cover -x 'examples/**' -x 'build/**' _mocha --report lcovonly -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
+    "coverage-lcov": "istanbul cover -x 'benchmark/**' -x 'examples/**' -x 'build/**' _mocha --report lcovonly -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
     "coverage-clean": "rm -rf ./coverage",
     "counter": "npm run build && node examples/strings/counter",
     "counter-direct": "npm run build && node examples/strings/counter-direct",
@@ -52,15 +52,22 @@
   "bugs": "http://github.com/elidoran/node-stating/issues",
   "devDependencies": {
     "@optimal/object": "^0.1.0",
+    "chalk": "^1.1.3",
+    "chevrotain": "^0.28.3",
     "coffee-coverage": "^2.0.1",
     "coffee-script": "^1.12.5",
     "coffeelint": "^1.16.0",
+    "comma-number": "^2.0.0",
     "coveralls": "^2.13.1",
     "fast-safe-stringify": "^1.1.13",
     "istanbul": "^0.4.5",
+    "json-stringify-safe": "^5.0.1",
     "mocha": "^3.3.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nave": "^2.2.3"
+    "myna-parser": "^1.1.0",
+    "nave": "^2.2.3",
+    "pad": "^1.1.0",
+    "parsimmon": "^1.2.0"
   },
   "dependencies": {
     "@flatten/array": "^1.1.1"
