--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
   "bugs": "http://github.com/elidoran/node-stating/issues",
   "devDependencies": {
     "@optimal/object": "^0.1.0",
+    "@stating/builder": "^0.1.0",
+    "@stating/string-plugin": "^0.2.0",
+    "benchmarked": "^1.1.1",
     "bl": "^1.2.1",
     "chalk": "^1.1.3",
     "chevrotain": "^0.28.3",
