drop node 4, add node 10

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "prepublish": "npm run build",
     "postpublish": "npm run clean",
     "test": "mocha --compilers coffee:coffee-script/register --reporter spec --bail --check-leaks test/lib",
-    "test4": "nave use 4.8 npm test",
-    "test6": "nave use 6.10 npm test",
-    "test7": "nave use 7.10 npm test",
-    "test-all": "npm run test4 && npm run test6 && npm run test7",
+    "test6": "nave use 6.14 npm test",
+    "test8": "nave use 8.11 npm test",
+    "test10": "nave use 10.0 npm test",
+    "tests": "npm run test6 && npm run test8 && npm run test10",
     "precoverage": "npm run clean",
     "coverage": "istanbul cover -x 'benchmark/**' -x 'examples/**' -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require ./build/coverage.js -R spec test/lib",
     "precoverage-lcov": "npm run clean",
